# memnet

./: CLAUDE.md  README.md  file-list.txt  icepick.sh  icepick.txt  index.html  make-directories.sh  snapshot.md
admissibility-kernels/: admissibility_kernel.c  spherepop_boundary.c  spherepop_lattice.c  spherepop_stack.c
axiom-synthesis/: MarineSalience.lean
entropy-reduction-flows/: admissibility_flow.jl  cognitive_heat_death.jl  entropy_gradient_flow.jl  marine_salience_flow.jl  mesoscale_dynamics.jl  recursive_field_memory.jl  resonance_field.jl  semantic_entropy_fields.jl
forth/: 01-semantic-relaxation.fth  02-clio-projection.fth  03-constraint-automaton.fth  04-rsvp-dynamics.fth  05-experimental-suite.fth  06-flyxion-core-vocabulary.fth  README.md
framework/: README.md  The_Ortyx_Protocol_and_wave_based_AI.json  The_Ortyx_Protocol_and_wave_based_AI.srt  The_Ortyx_Protocol_and_wave_based_AI.tsv  The_Ortyx_Protocol_and_wave_based_AI.txt  The_Ortyx_Protocol_and_wave_based_AI.vtt  The_Universal_Mathematics_of_System_Admissibility.json  The_Universal_Mathematics_of_System_Admissibility.srt  The_Universal_Mathematics_of_System_Admissibility.tsv  The_Universal_Mathematics_of_System_Admissibility.txt  The_Universal_Mathematics_of_System_Admissibility.vtt  The_universe_as_admissibility_constrained_collapse.json  The_universe_as_admissibility_constrained_collapse.srt  The_universe_as_admissibility_constrained_collapse.tsv  admissibility_principle.tex  (+4 more)
manifold-mappings/: Cargo.toml  README.md  icepick.txt  mml.aux  mml.out  mml.tex
manifold-mappings/src/: ast.rs  emitter.rs  parser.rs  token.rs  validator.rs
signal-as-structure/: Cargo.toml  README.md  pyproject.toml
signal-as-structure/examples/: demo.rs
signal-as-structure/src/: entropy.rs  equiv.rs  lib.rs  phase.rs  residual.rs  rsvp.rs  signal.rs  wave.rs
(+259 files in other folders)
