[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name            = "signal_as_structure"
version         = "0.1.0"
description     = "RSVP signal-as-structure: admissibility, wave memory, and residual field analysis"
requires-python = ">=3.9"

[tool.maturin]
features        = ["python"]
module-name     = "signal_as_structure"
